--- a/alert_submit.html
+++ b/alert_submit.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="./alertSubmit.js"></script>
-    <style>
-        form {
-            width: 200px;
-            display:flex;
-            flex-direction: column;
-        }
 
-        input[type="submit"] {
-            margin-top: 25px;
-        }
-    </style>
-  </head>
-  <body>
-    <form>
-        Name: <input type="text">
-        Surname: <input type="text">
-        Email: <input type="email">
-        Birthdate: <input type="date">
-        <input type="submit">
-    </form>
-  </body>
+<head>
+  <script src="alertSubmit.js" defer></script>
+  <style>
+    form {
+      width: 200px;
+      display: flex;
+      flex-direction: column;
+    }
+
+    input[type="submit"] {
+      margin-top: 25px;
+    }
+  </style>
+</head>
+
+<body>
+  <form>
+    Name: <input type="text">
+    Surname: <input type="text">
+    Email: <input type="email">
+    Birthdate: <input type="date">
+    <input type="submit">
+  </form>
+</body>
+
 </html>
